# turbopfor-om-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: tests.yml
TurboPForOM/: Makefile  tests.c
TurboPForOM/include/: bitpack.h  bitpack_.h  bitunpack_.h  bitutil.h  conf.h  fp.h  ic.h  sse_neon.h  transpose.h  vint.h  vp4.h  vsimple.h
TurboPForOM/src/: vp4d.c
src/: lib.rs
